# TensorOpt

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: scorecard.yml
cmake/Modules/: FindComputeCpp.cmake  FindIMGDNN.cmake  GTest.cmake
cmake/templates/: GTest.txt.in
cmake/toolchains/: gcc-generic.cmake
include/tensoropt/: compilation.hpp  device.hpp  event.hpp  execution.hpp  memory.hpp  model.hpp  operand.hpp  operation.hpp  result.hpp  tensoropt.hpp
src/backends/imgdnn/: CMakeLists.txt  backend.hpp  compilation.cpp  compilation.hpp  convert.cpp  convert.hpp  execution.cpp  execution.hpp  imgdnn_network_binary_symbols.cpp  model.cpp
src/common/: CMakeLists.txt  backend_print.hpp  device.cpp  device.hpp  event.cpp  event.hpp  execution.hpp  macro.hpp  memory.cpp  memory.hpp  model.cpp  model.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt
tests/basic_sample/: CMakeLists.txt  basic_sample.cpp
tests/common/: CMakeLists.txt  common_fixture.hpp  test_utils.hpp
tests/test_operations/: CMakeLists.txt
tests/test_operations/binary/: CMakeLists.txt  test_binary.cpp
tests/test_serialize/: CMakeLists.txt  test_serialize.cpp
